add/step-by-step

--- a/Samples/FNCMapsDirections/FNCMapsDirections.dproj
+++ b/Samples/FNCMapsDirections/FNCMapsDirections.dproj
@@ -131,6 +131,7 @@
             <Form>DirectionsMainView</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="Src\StepByStepHTML.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
