--- a/Samples/FNCMapsFMX/FNCMapsFMX.dproj
+++ b/Samples/FNCMapsFMX/FNCMapsFMX.dproj
@@ -5,10 +5,11 @@
         <FrameworkType>FMX</FrameworkType>
         <Base>True</Base>
         <Config Condition="'$(Config)'==''">Debug</Config>
-        <Platform Condition="'$(Platform)'==''">Android64</Platform>
+        <Platform Condition="'$(Platform)'==''">Win32</Platform>
         <TargetedPlatforms>32787</TargetedPlatforms>
         <AppType>Application</AppType>
         <MainSource>FNCMapsFMX.dpr</MainSource>
+        <ProjectName Condition="'$(ProjectName)'==''">FNCMapsFMX</ProjectName>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Config)'=='Base' or '$(Base)'!=''">
         <Base>true</Base>
